# FTL-Hyperspace

./: .editorconfig  .gitignore  404.html  ASMHooks.cpp  ASMHooks.h  AbilityDrone.cpp  AbilityDrone.h  AdditionalWeaponSlots.cpp  AlternateOxygenRendering.cpp  AlternateOxygenRendering.h  ArmamentControl_Extend.cpp  ArmamentControl_Extend.h  ArtilleryBarFix.cpp  ArtillerySystem.cpp  ArtillerySystem.h  AugmentValues.cpp  Augments.cpp  BUILDING.DEVCONTAINER.md  BUILDING.LINUX.md  BUILDING.WINDOWS.md  Balance.cpp  Balance.h  BeamFixes.cpp  Blueprint_Extend.cpp  Blueprint_Extend.h  Button_Extend.cpp  Button_Extend.h  CMakeLists.txt  Captain.cpp  CloneQueue.cpp  Colors.cpp  Colors.h  CommandConsole.cpp  CommandConsole.h  Constants.h  ControllerFunctionRewrites.cpp  ControllerManager.cpp  ControllerManager.h  CooldownNumbers.cpp  CooldownNumbers.h  (+311 more)
.devcontainer/: Dockerfile  Dockerfile-actual  devcontainer-fixes.sh  devcontainer.json  devcontainer.sh  llvm.patch  mingw.patch
.devcontainer/deps_prefetch_project/: CMakeLists.txt  prefetch.sh  vcpkg.json
.devcontainer/toolchains/: amd64-darwin-ftl.cmake  amd64-linux-ftl.cmake  ftl-linux.cmake  ftl-windows.cmake  x86-linux-ftl.cmake  x86-windows-ftl.cmake
.devcontainer/triplets/: amd64-darwin-ftl.cmake  amd64-linux-ftl.cmake  x86-linux-ftl.cmake  x86-windows-ftl.cmake
.github/workflows/: build-devcontainer.yml  build-linux-windows.yml  build-macos.yml  build.yml  check-hook-signatures.yml  github-pages.yml  release-linux-windows.yml  release-macos.yml  release-only.yml  release-prepare.yml  release.yml  update-wiki.yml  updateWiki.sh
.github/workflows-legacy/: README.md  release-only.yml
Mod Files/: Hyperspace Helper.ftl  Hyperspace.ftl  example_layout_syntax.xml  examples.lua  liblua5.3.so.0
Mod Files/data/: animations.xml.append  blueprints.xml.append  dlcSounds.xml.append  example.lua  example_system.lua  hyperspace.xml  names.xml.append  sounds.xml.append  text-de.xml.append  text-es.xml.append  text-fr.xml.append  text-it.xml.append  text-ja.xml  text-ja.xml.append  text-ko.xml  text-ko.xml.append  text-pl.xml.append  text-pt.xml.append  text-ru.xml.append  text-zh-Hans.xml.append  text_blueprints.xml.append  text_misc.xml.append  text_tooltips.xml.append
Mod Files/mod-appendix/: metadata.xml
Release Files/: README.txt
Release Files/Linux/: IGNORE_THIS_FILE.txt  README.txt
Release Files/MacOS/: Hyperspace.command  README.txt
Release Files/Windows/: README.txt
Release Files/Windows - Extract these files into where FTLGame.exe is/: downgrade.bat
_i18n/: de.yml  en.yml  fr.yml  ko.yml
_i18n/de/: index.md
_i18n/en/: index.md
_i18n/fr/: index.md
_i18n/ko/: index.md
_layouts/: default.html
assets/css/: custom-styles.css
buildscripts/: _sr_xmllike.py  build-one-variant.sh  buildall-darwin-release-only.sh  buildall-darwin.sh  buildall-from-docker.bat  buildall-from-docker.sh  buildall-release-only-from-docker.sh  buildall-release-only.sh  buildall.sh  ci-buildall-release-only-from-docker.sh  ci-bump-version.sh  docker-run-in-devcontainer.sh  tag_release.py  update_version.py
buildscripts/ci/: buildall-release-only-from-docker.sh  bump-version.sh  package-linux.sh  package-macos.sh  package-windows.sh  setup-macos.sh
buildscripts/darwin-1.6.12/: build-debugonly-from-docker.sh  build-debugonly.sh  build-releaseonly-from-docker.sh  build-releaseonly.sh
buildscripts/darwin-1.6.13/: build-debugonly-from-docker.sh  build-debugonly.sh  build-releaseonly-from-docker.sh  build-releaseonly.sh
buildscripts/linux-1.6.12/: build-debugonly-from-docker.sh  build-debugonly.sh  build-releaseonly-from-docker.sh  build-releaseonly.sh
buildscripts/linux-1.6.13/: build-debugonly-from-docker.sh  build-debugonly.sh  build-releaseonly-from-docker.sh  build-releaseonly.sh
buildscripts/windows/: build-debugonly-from-docker.sh  build-debugonly.sh  build-releaseonly-from-docker.sh  build-releaseonly.sh  buildlog.txt
cmake/: FindDiscordRpc.cmake
cmake-toolchains/: linux.cmake
de/: 404.html  feed.xml  index.html
disasm/: variables.txt
fr/: 404.html  feed.xml  index.html
hash-library/: sha3.cpp
install-guides/linux/: index.html  index.md
install-guides/mac/: index.html  index.md
install-guides/windows/: gog-install.md  humble-install-german.md  humble-install.md  index.html  index.md  other-sources.md  steam-install  steam-install-german.md  steam-install.md  windows-common-install.html  windows-common-install.md  windows-slipstream.md
ko/: 404.html  feed.xml  index.html
libzhl/include/: zhl.h  zhl_internal.h
libzhlgen/: check_hook_signatures.py  compare_zhl_nm.py  parsefuncs.bat  parsefuncs.sh
libzhlgen/darwin/: test_all_binaries.sh
libzhlgen/lua/: cparser.lua  parsefuncs - Copy.lua  parsefuncs.lua
libzhlgen/test/: FTLGameStripped.h  IDA Formatting.txt  generate.bat
lua/: EventEnums.h  InternalEvents.cpp  InternalEvents.h  LuaLibScript.cpp  LuaLibScript.h  LuaScriptInit.cpp  LuaScriptInit.h  RenderEvents.cpp  RenderEvents.h  eventDefines.h  examples.lua  linit.c  luaDefines.cpp  luaDefines.h  luaGlobal.h  luaInclude.h  luaScript.cpp  luaScript.h  swigluarun.h
lua/builtin/: global.lua  math.lua
lua/modules/: .gitignore  defines.cpp  defines.i  graphics.cpp  graphics.i  hyperspace.cpp  hyperspace.i  rapidxml.i  saving.i
lua/objects/: LuaWorld.cpp  LuaWorld.h  (+2 more)
rapidxml/: rapidxml_print.hpp
save-reference-misc/: HYPERSPACE_PROFILE_FORMAT.md  ae_prof.ksy  hs_prof.ksy
symtab/: linux_gog_amd64_1-6-12.txt  linux_gog_x86_1-6-12.txt  linux_steam_amd64_1-6-13.txt  linux_steam_x86_1-6-13.txt  win_steam_x86_1-6-9.txt
tests/: .test.env.example  TestScript.cpp  run_test_darwin.sh  sanitize_saves.sh
textures/: button_small_autofire.psd
unused/: Captain.cpp  ScriptFPS.cpp  UpgradesFix.cpp
wiki/: Building-Windows.md  Building-on-Windows.md  Contributing-to-Hyperspace.md  Finding-Signatures-with-Ghidra.md  Home.md  Hyperspace.xml.md  Lua-API.md  Lua-Defines-module.md  Lua-Graphics-Module.md  Lua-Hyperspace-Module.md  Lua-Script-Module.md  Symbol-Lookup.md  Testing-Linux-on-Windows.md
(+1058 files in other folders)
